Add API for getting ids of images related to one product
