# src/main/resources/static/openapi.yaml
@@ -1,14 +1,13 @@
 openapi: 3.0.3
 info:
   title: Product service
-  description: |-
-    Product service for the 'Livestock shop' project.
+  description: Product service for the 'Livestock shop' project.
   contact:
     name: Luke Sukhanov
     email: lukesukhanov@gmail.com
     url: https://github.com/lukesukhanov
-  version: "1.0"
-servers: 
+  version: '1.0'
+servers:
 - url: http://127.0.0.1:8082
 paths:
   /products:
@@ -26,7 +25,7 @@ paths:
           format: int32
       - in: query
         name: size
-        description: The page size 
+        description: The page size
         required: false
         schema:
           type: integer
@@ -57,7 +56,27 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ProductsPage"
+                $ref: '#/components/schemas/ProductsPage'
+  /productImages:
+    get:
+      tags:
+      - Product images
+      summary: Get ids of the images related to the required product
+      parameters:
+      - in: query
+        name: productId
+        description: The product's id
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: Normal response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IdsOfImagesForOneProduct'
 components:
   schemas:
     Product:
@@ -93,7 +112,7 @@ components:
         content:
           type: array
           items:
-            $ref: "#/components/schemas/Product"
+            $ref: '#/components/schemas/Product'
         numberOfElements:
           type: integer
           format: int32
@@ -112,3 +131,15 @@ components:
           type: integer
           format: int32
           example: 2
+    IdsOfImagesForOneProduct:
+      type: object
+      properties:
+        idsOfImages:
+          type: array
+          items:
+            type: integer
+            format: int64
+          example:
+          - 1
+          - 2
+          - 3
